[gd_scene load_steps=3 format=3 uid="uid://c1kt45x0yh3ny"]

[ext_resource type="Script" path="res://Scenes/PauseMenu/Pause.gd" id="1_pwaji"]
[ext_resource type="Theme" uid="uid://uabuugcc4jy6" path="res://Art/Themes/BaseTheme.tres" id="2_kph14"]

[node name="Pause" type="CanvasLayer"]
layer = 5

[node name="CanvasLayer" type="Control" parent="." node_paths=PackedStringArray("default_focus_node")]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwaji")
default_focus_node = NodePath("VBoxContainer/Resume")

[node name="Darken" type="ColorRect" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.203922)

[node name="Title" type="RichTextLabel" parent="CanvasLayer"]
clip_contents = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -623.0
offset_top = 184.0
offset_right = 624.0
offset_bottom = 359.0
grow_horizontal = 2
theme = ExtResource("2_kph14")
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 12
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 170
bbcode_enabled = true
text = "[center]PAUSED"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -333.0
offset_top = 499.0
offset_right = 333.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kph14")
theme_override_constants/separation = 50

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "RESUME SIMULATION"

[node name="MainMenu" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "MAIN MENU"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = ":QUIT!"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Resume" to="CanvasLayer" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenu" to="CanvasLayer" method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="CanvasLayer" method="_on_quit_pressed"]
